--- a/Minutes/20190902_google.md
+++ b/Minutes/20190902_google.md
@@ -26,3 +26,22 @@ onsite interview 2rounds
    interview materials
  resume
 
+## Tips
+
+not dive into coding
+ask detail, what is expected, input output, how large, restriction,
+
+to communicate and organize solution
+  give idea
+  solution approach
+  discussion
+  
+write code clean, corner case, potential bugs
+ways to optimize, efficient
+
+45 minutes
+  2questions
+  care clock
+
+
+
