--- a/Language/Rust/samplecli/Cargo.toml
+++ b/Language/Rust/samplecli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_world"
+name = "samplecli"
 version = "0.1.0"
 authors = ["Takeshi Fujiki <takecian@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
